Fixing Attempt: Button Not Properly Clickable On Mobile.

--- a/css/modal.css
+++ b/css/modal.css
@@ -77,6 +77,7 @@
 	left: 20px;
 	margin: 0 auto;
 	transition: all 1s ease;
+	cursor: pointer;
 }
 
 .button:focus {
